--- a/idesign/sass/patials/_main-column.scss
+++ b/idesign/sass/patials/_main-column.scss
@@ -36,6 +36,24 @@ article {
   }
 }
 
+
+.featured-card {
+
+  @media screen and (max-width: 991px) {
+    max-width: 400px !important;
+    margin: 1rem auto !important;
+  }
+}
+
+.opinion-card {
+
+  @media screen and (max-width: 991px) {
+    max-width: 400px !important;
+    margin: 1rem auto !important;
+  }
+}
+
+
 .card {
   &-title {
     font-family: $condensed;
@@ -74,6 +92,7 @@ article {
   }
 }
 
+
 .sign-up {
   form {
     background: $body-bg;
@@ -91,6 +110,11 @@ article {
   button {
     background: $primary-bg;
     color: $light;
+  }
+
+  @media screen and (max-width: 991px) {
+    max-width: 400px !important;
+    margin: auto !important;
   }
 }
 
